@@ -38,6 +38,8 @@
 #  define __DECL_SIMD_cos __DECL_SIMD_PPC64
 #  undef __DECL_SIMD_sincos
 #  define __DECL_SIMD_sincos __DECL_SIMD_PPC64
+#  undef __DECL_SIMD_sincosf
+#  define __DECL_SIMD_sincosf __DECL_SIMD_PPC64
 
 # endif
 #endif
