@@ -2619,6 +2619,9 @@ ldouble: 7
 Function: "sincos_vlen2":
 double: 2
 
+Function: "sincos_vlen4":
+float: 1
+
 Function: "sinh":
 double: 2
 float: 2
